--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Monster RPG</title>
     <link rel="stylesheet" href="game.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <p class="js-game-info">Welcome to <strong>Dragon Repeller</strong>. You must defeat the dragon that is <br>attacking people in the town. You have to save them. <strong>Be Careful.</strong><br><strong>(<i>head to the store to buy weapons and more health to defeat the dragon. <br>Fight some monsters in the cave to earn you more experience(XP) and gold</i>)</strong></p>
